# stm32-nucleo-f401re

./: .gitignore  LICENSE  README.md
Drivers/max7219-driver/: Cargo.toml  README.md
Drivers/max7219-driver/src/: lib.rs
Embassy/gpio/: Cargo.toml
Embassy/gpio/src/: main.rs
Embassy/uart-serial-terminal/: Cargo.toml  rust-toolchain.toml
Embassy/uart-serial-terminal/src/: main.rs
PAC Examples/stm32-uart-hal/: Cargo.toml
PAC Examples/stm32-uart-hal/src/: lib.rs
PAC Examples/svd2rust/stm32f401_pac/: Cargo.toml  STM32F401.svd  device.x
PAC Examples/svd2rust/stm32f401_pac/src/: adc1.rs  adc_common.rs  crc.rs  dbg.rs  dma2.rs  exti.rs  flash.rs  gpiob.rs  i2c3.rs  i2s2ext.rs  iwdg.rs  lib.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  pwr.rs  rcc.rs  rtc.rs  sdio.rs  syscfg.rs  tim1.rs  tim10.rs  tim11.rs  tim3.rs  tim5.rs  tim9.rs  usart1.rs  wwdg.rs
PAC Examples/svd2rust/stm32f401_pac/src/adc1/: cr1.rs  cr2.rs  dr.rs  htr.rs  jdr1.rs  jdr2.rs  jdr3.rs  jdr4.rs  jofr1.rs  jofr2.rs  jofr3.rs  jofr4.rs  jsqr.rs  ltr.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sr.rs
PAC Examples/svd2rust/stm32f401_pac/src/adc_common/: ccr.rs  csr.rs
PAC Examples/svd2rust/stm32f401_pac/src/crc/: cr.rs  dr.rs  idr.rs
PAC Examples/svd2rust/stm32f401_pac/src/dbg/: dbgmcu_apb1_fz.rs  dbgmcu_apb2_fz.rs  dbgmcu_cr.rs  dbgmcu_idcode.rs
PAC Examples/svd2rust/stm32f401_pac/src/dma2/: hifcr.rs  hisr.rs  lifcr.rs  lisr.rs  s0cr.rs  s0fcr.rs  s0m0ar.rs  s0m1ar.rs  s0ndtr.rs  s0par.rs  s1cr.rs  s1fcr.rs  s1m0ar.rs  s1m1ar.rs  s1ndtr.rs  s1par.rs  s2cr.rs  s2fcr.rs  s2m0ar.rs  s2m1ar.rs  s2ndtr.rs  s2par.rs  s3cr.rs  s3fcr.rs  s3m0ar.rs  s3m1ar.rs  s3ndtr.rs  s3par.rs  s4cr.rs  s4fcr.rs  s4m0ar.rs  s4m1ar.rs  s4ndtr.rs  s4par.rs  s5cr.rs  s5fcr.rs  s5m0ar.rs  s5m1ar.rs  s5ndtr.rs  s5par.rs  (+12 more)
PAC Examples/svd2rust/stm32f401_pac/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs  swier.rs
PAC Examples/svd2rust/stm32f401_pac/src/flash/: acr.rs  cr.rs  keyr.rs  optcr.rs  optkeyr.rs  sr.rs
PAC Examples/svd2rust/stm32f401_pac/src/gpioa/: afrl.rs  bsrr.rs  idr.rs  moder.rs  odr.rs  ospeedr.rs  pupdr.rs
PAC Examples/svd2rust/stm32f401_pac/src/gpiob/: lckr.rs  moder.rs  ospeedr.rs  otyper.rs  pupdr.rs
PAC Examples/svd2rust/stm32f401_pac/src/gpioh/: afrh.rs  moder.rs  pupdr.rs
PAC Examples/svd2rust/stm32f401_pac/src/i2c3/: ccr.rs  cr1.rs  cr2.rs  dr.rs  oar1.rs  oar2.rs  sr1.rs  sr2.rs  trise.rs
PAC Examples/svd2rust/stm32f401_pac/src/i2s2ext/: cr1.rs  cr2.rs  crcpr.rs  dr.rs  i2scfgr.rs  i2spr.rs  rxcrcr.rs  sr.rs  txcrcr.rs
PAC Examples/svd2rust/stm32f401_pac/src/iwdg/: kr.rs  pr.rs  rlr.rs  sr.rs
PAC Examples/svd2rust/stm32f401_pac/src/otg_fs_device/: diepctl1.rs  diepctl2.rs  diepctl3.rs  diepempmsk.rs  diepint0.rs  diepint1.rs  diepint2.rs  diepint3.rs  dieptsiz0.rs  dieptsiz1.rs  dieptsiz2.rs  dieptsiz3.rs  doepctl0.rs  doepctl1.rs  doepctl2.rs  doepctl3.rs  doepint0.rs  doepint1.rs  doepint2.rs  doepint3.rs  doeptsiz0.rs  doeptsiz1.rs  doeptsiz2.rs  doeptsiz3.rs  dtxfsts0.rs  dtxfsts1.rs  dtxfsts2.rs  dtxfsts3.rs  dvbusdis.rs  dvbuspulse.rs  fs_daint.rs  fs_daintmsk.rs  fs_dcfg.rs  fs_dctl.rs  fs_diepctl0.rs  fs_diepmsk.rs  fs_doepmsk.rs  fs_dsts.rs
PAC Examples/svd2rust/stm32f401_pac/src/otg_fs_global/: fs_cid.rs  fs_dieptxf1.rs  fs_dieptxf2.rs  fs_dieptxf3.rs  fs_gahbcfg.rs  fs_gccfg.rs  fs_gintmsk.rs  fs_gintsts.rs  fs_gnptxfsiz_device.rs  fs_gnptxfsiz_host.rs  fs_gnptxsts.rs  fs_gotgctl.rs  fs_gotgint.rs  fs_grstctl.rs  fs_grxfsiz.rs  fs_grxstsr_device.rs  fs_grxstsr_host.rs  fs_gusbcfg.rs  fs_hptxfsiz.rs
PAC Examples/svd2rust/stm32f401_pac/src/otg_fs_host/: fs_hcchar0.rs  fs_hcchar1.rs  fs_hcchar2.rs  fs_hcchar3.rs  fs_hcchar4.rs  fs_hcchar5.rs  fs_hcchar6.rs  fs_hcchar7.rs  fs_hcfg.rs  fs_hcint0.rs  fs_hcint1.rs  fs_hcint2.rs  fs_hcint3.rs  fs_hcint4.rs  fs_hcint5.rs  fs_hcint6.rs  fs_hcint7.rs  fs_hcintmsk0.rs  fs_hcintmsk1.rs  fs_hcintmsk2.rs  fs_hcintmsk3.rs  fs_hcintmsk4.rs  fs_hcintmsk5.rs  fs_hcintmsk6.rs  fs_hcintmsk7.rs  fs_hctsiz0.rs  fs_hctsiz1.rs  fs_hctsiz2.rs  fs_hctsiz3.rs  fs_hctsiz4.rs  fs_hctsiz5.rs  fs_hctsiz6.rs  fs_hctsiz7.rs  fs_hfnum.rs  fs_hprt.rs  fs_hptxsts.rs  haint.rs  haintmsk.rs  hfir.rs
PAC Examples/svd2rust/stm32f401_pac/src/otg_fs_pwrclk/: fs_pcgcctl.rs
PAC Examples/svd2rust/stm32f401_pac/src/pwr/: cr.rs  csr.rs
PAC Examples/svd2rust/stm32f401_pac/src/rcc/: ahb1enr.rs  ahb1lpenr.rs  ahb1rstr.rs  ahb2enr.rs  ahb2lpenr.rs  ahb2rstr.rs  apb1enr.rs  apb1lpenr.rs  apb1rstr.rs  apb2enr.rs  apb2lpenr.rs  apb2rstr.rs  bdcr.rs  cfgr.rs  cir.rs  cr.rs  csr.rs  pllcfgr.rs  plli2scfgr.rs  sscgr.rs
PAC Examples/svd2rust/stm32f401_pac/src/rtc/: alrmar.rs  alrmassr.rs  alrmbr.rs  alrmbssr.rs  bkp0r.rs  bkp10r.rs  bkp11r.rs  bkp12r.rs  bkp13r.rs  bkp14r.rs  bkp15r.rs  bkp16r.rs  bkp17r.rs  bkp18r.rs  bkp19r.rs  bkp1r.rs  bkp2r.rs  bkp3r.rs  bkp4r.rs  bkp5r.rs  bkp6r.rs  bkp7r.rs  bkp8r.rs  bkp9r.rs  calibr.rs  calr.rs  cr.rs  dr.rs  isr.rs  prer.rs  shiftr.rs  ssr.rs  tafcr.rs  tr.rs  tsdr.rs  tsssr.rs  tstr.rs  wpr.rs  wutr.rs
PAC Examples/svd2rust/stm32f401_pac/src/sdio/: arg.rs  clkcr.rs  cmd.rs  dcount.rs  dctrl.rs  dlen.rs  dtimer.rs  fifo.rs  fifocnt.rs  icr.rs  mask.rs  power.rs  resp1.rs  resp2.rs  resp3.rs  resp4.rs  respcmd.rs  sta.rs
PAC Examples/svd2rust/stm32f401_pac/src/syscfg/: cmpcr.rs  exticr1.rs  exticr2.rs  exticr3.rs  exticr4.rs  memrm.rs  pmc.rs
PAC Examples/svd2rust/stm32f401_pac/src/tim1/: arr.rs  bdtr.rs  ccer.rs  ccmr1_output.rs  ccmr2_input.rs  ccmr2_output.rs  ccr3.rs  ccr4.rs  cnt.rs  cr2.rs  dier.rs  egr.rs  rcr.rs  smcr.rs  sr.rs
PAC Examples/svd2rust/stm32f401_pac/src/tim10/: ccmr1_input.rs  dier.rs
PAC Examples/svd2rust/stm32f401_pac/src/tim11/: ccer.rs  ccmr1_output.rs  cr1.rs  egr.rs  or.rs  sr.rs
PAC Examples/svd2rust/stm32f401_pactest/: Cargo.toml
PAC Examples/svd2rust/stm32f401_pactest/src/: main.rs
PAC Examples/uart_hal_test/: Cargo.toml
PAC Examples/uart_hal_test/src/: main.rs
Polling/gpio/: Cargo.toml  openocd.gdb
analog-temperature/: Cargo.toml
(+121 files in other folders)
