[package]
authors = ["apollolabsdev <104051566+apollolabsdev@users.noreply.github.com>"]
name = "stm32f401_pac"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.2", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]


